--- a/templates/index.html
+++ b/templates/index.html
@@ -61,7 +61,7 @@
                         <div class="collapse navbar-collapse" id="navbarsExample04">
                            <ul class="navbar-nav mr-auto">
                               <li class="nav-item">
-                                 <a class="nav-link" href="index.html">Contact Us</a>
+                                 <a class="nav-link" href="/audio">Audio to Text</a>
                               </li>
                               <li class="nav-item">
                                  <a class="nav-link" href="/login">Login </a>
