--- a/static/css/responsive.css
+++ b/static/css/responsive.css
@@ -104,7 +104,7 @@
     }
     .navigation.navbar-dark .navbar-nav .nav-link {
         padding: 10px 0;
-        color: #fff;
+        color: #23b33a;
     }
     .navigation.navbar-dark .navbar-toggler {
         border: inherit;
@@ -183,7 +183,7 @@
     }
     .navigation.navbar-dark .navbar-nav .nav-link {
         padding: 10px 0;
-        color: #fff;
+        color: #23b33a;
     }
     .navigation.navbar-dark .navbar-toggler {
         float: right;
