--- a/templates/index.html
+++ b/templates/index.html
@@ -48,7 +48,7 @@
                      <div class="full">
                         <div class="center-desk">
                            <div class="logo">
-                              <a href="index.html"><img src="static/images/logo.png" alt="#" /></a>
+                              <a href="/"><img src="static/images/logo.png" alt="#" /></a>
                            </div>
                         </div>
                      </div>
@@ -64,13 +64,13 @@
                                  <a class="nav-link" href="/audio">Audio to Text</a>
                               </li>
                               <li class="nav-item">
-                                 <a class="nav-link" href="/login">Login </a>
+                                 <a class="nav-link" href="/login">Login</a>
                               </li>
                               <li class="nav-item">
-                                 <a class="nav-link" href="/login">Register</a>
+                                 <a class="nav-link" href="/signup">Register</a>
                               </li>
                            </ul>
-                           <div class="sign_btn"><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></div>
+                           <div class="sign_btn"><a href="#"><i class="fa fa-search" aria-hidden="true" style="color: #23b33a;"></i></a></div>
                         </div>
                      </nav>
                   </div>
@@ -87,8 +87,8 @@
                <div class="col-md-6">
                   <div class="text-bg">
                      <div class="padding_lert">
-                        <h1>GYM AND FITNESS</h1>
-                        <span>Landing Page 2019</span>
+                        <h1>Welcome to WhatSound!</h1>
+                        <span>Convert WhatsApp Voice Mesagges Into Text</span>
                         <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it</p>
                         <a class="read_more" href="#">Read More</a>
                      </div>
@@ -96,7 +96,7 @@
                </div>
                <div class="col-md-6">
                   <div class="text-img">
-                     <figure><img src="static/images/toy_img.png" alt="#"/></figure>
+                     <figure><img src="static/images/picture.png" alt="#"/></figure>
                   </div>
                </div>
             </div>
