--- a/templates/audio.html
+++ b/templates/audio.html
@@ -6,6 +6,13 @@
 <body>
 	<form action="/audio" method="POST" enctype="multipart/form-data">
 		<input type="file" accept="audio/*" required name="audio" id="audio" enctype="multipart/form-data">
+		<div class="custom-select" style="width:200px;">
+		  <select name = "language">
+		    <option value="en-US">English</option>
+		    <option value="he">Hebrew</option>
+		    <option value="ar-JO">Arabic</option>
+		  </select>
+		</div>
 		<button>Transcribe!</button>
 	</form>
 	<p>output:</p>
