--- a/templates/index.html
+++ b/templates/index.html
@@ -87,14 +87,14 @@
                <div class="col-md-6">
                   <div class="text-bg">
                      <div class="padding_lert">
-                        <h1>Welcome to WhatSound!</h1>
-                        <span>Convert WhatsApp Voice Mesagges Into Text</span>
-                        <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it</p>
-                        <a class="read_more" href="#">Read More</a>
+                        <h1 style="color: black;">Welcome to WhatSound!</h1>
+                        <span style="color: #23b33a;">Convert WhatsApp Voice Mesagges Into Text</span>
+                        <p style="color: black;">There are times in life you cannot listen to a voice message you got, we are here to fix it. We will convert your recording into text so you can read your voice message instead of listening to it.<br> Use it now, thank us later :)</p>
+                        <a class="read_more" href="/signup" style="color: #23b33a; border-color: #23b33a;">Start now</a>
                      </div>
                   </div>
                </div>
-               <div class="col-md-6">
+               <div class="col-md-6">="
                   <div class="text-img">
                      <figure><img src="static/images/picture.png" alt="#"/></figure>
                   </div>
@@ -104,7 +104,7 @@
       </section>
       <!-- end banner -->
       <!-- features -->
-      <div class="Features">
+      <!-- <div class="Features">
          <div class="container">
             <div class="row">
                <div class="col-md-12">
@@ -141,7 +141,7 @@
       </div>
       <!-- end Features -->
       <!-- discount -->
-      <div class="discount">
+      <!-- <div class="discount">
          <div class="container">
             <div class="row">
                <div class="col-md-12">
@@ -153,10 +153,10 @@
                </div>
             </div>
          </div>
-      </div>
+      </div> -->
       <!-- end discount -->
       <!-- request -->
-      <div class="request">
+      <!-- <div class="request">
          <div class="container">
             <div class="row">
                <div class="col-md-12">
@@ -195,10 +195,10 @@
                </div>
             </div>
          </div>
-      </div>
+      </div> -->
       <!-- end request -->
       <!-- people -->
-      <div class="people">
+      <!-- <div class="people">
          <div class="container">
             <div class="row">
                <div class="col-md-12">
@@ -272,10 +272,10 @@
                </div>
             </div>
          </div>
-      </div>
+      </div> -->
       <!-- end people -->
       <!--  footer -->
-      <footer>
+      <!-- <footer>
          <div class="footer">
             <div class="container">
                <div class="row">
@@ -301,7 +301,7 @@
                </div>
             </div>
          </div>
-      </footer>
+      </footer> --> 
       <!-- end footer -->
       <!-- Javascript files-->
       <script src="static/js/jquery.min.js"></script>
