--- a/templates/audio.html
+++ b/templates/audio.html
@@ -2,21 +2,111 @@
 <html>
 <head>
 	<title>Audio To Text</title>
+	<!-- bootstrap css -->
+      <link rel="stylesheet" href="static/css/bootstrap.min.css">
+      <!-- style css -->
+      <link rel="stylesheet" href="static/css/style.css">
+      <!-- Responsive-->
+      <link rel="stylesheet" href="static/css/responsive.css">
+      <!-- fevicon -->
+      <link rel="icon" href="static/images/fevicon.png" type="image/gif" />
+      <!-- Scrollbar Custom CSS -->
+      <link rel="stylesheet" href="static/css/jquery.mCustomScrollbar.min.css">
+      <!-- Tweaks for older IEs-->
+      <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen">
 </head>
-<body>
-	<form action="/audio" method="POST" enctype="multipart/form-data">
-		<input type="file" accept="audio/*" required name="audio" id="audio" enctype="multipart/form-data">
-		<div class="custom-select" style="width:200px;">
-		  <select name = "language">
-		    <option value="en-US">English</option>
-		    <option value="he">Hebrew</option>
-		    <option value="ar-JO">Arabic</option>
-		  </select>
-		</div>
-		<button>Transcribe!</button>
-	</form>
-	<p>output:</p>
-	<p>{{t}}</p>
+<body class="main-layout">
+	<header>
+         <!-- header inner -->
+         <div class="header">
+            <div class="container-fluid">
+               <div class="row">
+                  <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col logo_section">
+                     <div class="full">
+                        <div class="center-desk">
+                           <div class="logo">
+                              <a href="/"><img src="static/images/logo.png" alt="#" /></a>
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="col-xl-9 col-lg-9 col-md-9 col-sm-9">
+                     <nav class="navigation navbar navbar-expand-md navbar-dark ">
+                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample04" aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarsExample04">
+                           <ul class="navbar-nav mr-auto">
+                              <li class="nav-item">
+                                 <a class="nav-link" href="/audio">Audio to Text</a>
+                              </li>
+                              <li class="nav-item">
+                                 <a class="nav-link" href="/login">Login</a>
+                              </li>
+                              <li class="nav-item">
+                                 <a class="nav-link" href="/signup">Register</a>
+                              </li>
+                           </ul>
+                           <div class="sign_btn"><a href="#"><i class="fa fa-search" aria-hidden="true" style="color: #23b33a;"></i></a></div>
+                        </div>
+                     </nav>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </header>
+      <section class="banner_main">
+      <div class="request">
+         <div class="container">
+            <div class="row">
+               <div class="col-md-12">
+                  <div class="titlepage">
+                     <h2>Convert your voice message!</h2>
+                     <span>Add an audio file and choose the language</span>
+                  </div>
+               </div>
+            </div>
+            <div class="row">
+               <div class="col-md-4">
+                  <form id="request" style="background-color: #23b33a;" class="main_form" action="/audio" method="POST" enctype="multipart/form-data">
+                     <div class="row">
+                        <div class="col-md-12 ">
+							<input type="file" accept="audio/*" required name="audio" id="audio" enctype="multipart/form-data">
+                        </div><br><br>
+                        <div class="col-md-12">
+							<div class="custom-select" style="width:200px;">
+									  <select name = "language">
+									    <option value="en-US">English</option>
+									    <option value="he">Hebrew</option>
+									    <option value="ar-JO">Arabic</option>
+									    <option value="de-DE">German</option>
+									    <option value="ru-RU">Russian</option>
+									    <option value="fr-FR">French</option>
+									    <option value="nl-NL">Dutch</option>
+									    <option value="ja-JP">Japanese</option>
+									    <option value="it-IT">Italian</option>
+									  </select>
+									</div>                        
+						</div><br><br>
+                        <div class="col-sm-12">
+                           <button>Transcribe!</button>
+                        </div>
+                     </div>
+                  </form>
+               </div>
+               <div class="col-md-8">
+                  <div class="back_img">
+                     <figure><p>output:</p>
+	<p>{{t}}</p></figure>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </div>
+  </section>
+	
+	
 
 </body>
 </html>
