--- a/templates/index.html
+++ b/templates/index.html
@@ -139,7 +139,7 @@
             </div>
          </div>
       </div>
-      <!-- end Features -->
+      <!-- end Features
       <!-- discount -->
       <!-- <div class="discount">
          <div class="container">
@@ -153,7 +153,7 @@
                </div>
             </div>
          </div>
-      </div> -->
+      </div> --> 
       <!-- end discount -->
       <!-- request -->
       <!-- <div class="request">
@@ -301,7 +301,7 @@
                </div>
             </div>
          </div>
-      </footer> --> 
+      </footer>  -->
       <!-- end footer -->
       <!-- Javascript files-->
       <script src="static/js/jquery.min.js"></script>
