--- a/templates/audio.html
+++ b/templates/audio.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Audio To Text</title>
+	<title>WhatSound | Convert</title>
 	<!-- bootstrap css -->
       <link rel="stylesheet" href="static/css/bootstrap.min.css">
       <!-- style css -->
